--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,17 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
+/server/node_modules
 /client/node_modules
+/node_modules
 /.pnp
 .pnp.js
 
 # testing
-/client/coverage
+/coverage
 
 # production
-/client/build
-
-/server/node_modules
-
-# testing
-/server/coverage
-
-# production
-/server/build
+/build
 
 # misc
 .DS_Store
